Scrollbar in mailwindow - foldertree is always shown in order to prevent always jumping to top when cursor leaves the foldertree

--- a/theme/chrome/skin/messenger/mailWindow1.css
+++ b/theme/chrome/skin/messenger/mailWindow1.css
@@ -58,19 +58,6 @@
   color: #6F6F6F !important;
 }
 
-#folderTree scrollbar {
-  -moz-appearance: none;
-  display: none;
-}
-
-#folderTree:hover scrollbar {
-  display: inline !important;
-}
-
-#folderTree scrollbar slider {
-  background-color: #dedede !important;
-}
-
 #threadTree {
   border-bottom: 1px solid ThreeDShadow;
 }
